# python-beyond-basics

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  code_inspect.html  code_inspect.md  concurrency_and_parallelism.html  concurrency_and_parallelism.md  context_managers.html  context_managers.md  coroutines.html  coroutines_and_concurrency.html  coroutines_and_concurrency.md  decorators.html  descriptors.html  descriptors.md  dynamic_execution.html  generators.html  generators.md  generics.html  generics.md  genindex.html  higher_order_functions.html  higher_order_functions.md  intro.html  intro.md  iterators.html  iterators.md  literature.html  metaclasses.html  metaclasses.md  objects.inv  parallelism.html  pyproject.toml  references.bib  references.html  search.html  searchindex.js  (+10 more)
.github/ISSUE_TEMPLATE/: report-error.md  report-error.yml  request-topic.md  request-topic.yml
.github/workflows/: gh-deploy.yml
_sources/: code_inspect.ipynb  concurrency_and_parallelism.ipynb  concurrency_and_parallelism.md  context_managers.ipynb  context_managers.md  coroutines.ipynb  coroutines.md  coroutines_and_concurrency.md  decorators.ipynb  decorators.md  descriptors.ipynb  descriptors.md  dynamic_execution.ipynb  dynamic_execution.md  generators.ipynb  generics.ipynb  generics.md  higher_order_functions.ipynb  higher_order_functions.md  intro.ipynb  intro.md  iterators.md  literature.md  metaclasses.ipynb  metaclasses.md  special_attributes.ipynb  special_attributes.md  structural_subtyping.md  weakref.ipynb
_static/interactives/: async.html  (+1 more)
